fixing spacing for contributions images

--- a/rad/style.css
+++ b/rad/style.css
@@ -281,8 +281,8 @@ a:hover	{
 }
 
 .deck-status {
-	font-size: 0.75em;
-	color: #2f2f2f;
+	font-size: 0.667em;
+	color: #3f3f3f;
    margin: 0 100px 50px 0em;
  	font-weight: 500;
 }
